# scapy-red

./: .gitignore  pyproject.toml  setup.py  tox.ini
.github/workflows/: unittests.yml
doc/: winreg.rst
scapyred/: dominfo.py  ldaphero.py  listips.py  lsamgr.py  smbscan.py  winreg.py
tests/: config.utsc  test_winreg.py  winreg.uts
