[build-system]
requires = [
    "setuptools>=77.0.0",
    "scapy>=2.7.1rc1",
    "scapy-rpc>=0.0.7",
]
build-backend = "setuptools.build_meta"

[project]
name = "scapy-red"
version = "0.0.3"
dynamic = [ "readme" ]
authors = [
    { name="Gabriel POTTER" },
]
license = "GPL-2.0-only"
requires-python = ">=3.11, <4"
description = "Scapy RED - tools and scripts for pentesters"
keywords = [ "network" ]
dependencies = [
    "scapy>=2.7.1rc1",
    "scapy-rpc>=0.0.7",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/secdev/scapy-red"
Download = "https://github.com/secdev/scapy-red/tarball/master"
"Source Code" = "https://github.com/secdev/scapy-red"
Changelog = "https://github.com/secdev/scapy-red/releases"

[tool.setuptools.packages.find]
include = [ "scapyred", "scapyred.completions" ]

[project.scripts]
scapy-dominfo   = "scapyred.dominfo:main"
scapy-listips   = "scapyred.listips:main"
scapy-ldaphero  = "scapyred.ldaphero:main"
scapy-smbclient = "scapyred.smbclient:main"
scapy-smbscan   = "scapyred.smbscan:main"
scapy-lsamgr    = "scapyred.lsamgr:main"
scapy-winreg    = "scapyred.winreg:main"
